# h2o-2

./: .env  .gitignore  Cargo.toml  Makefile  README.md  build.gradle  build.sh  config.yml  db.sh  main.go  package.json  pom.xml
conf/: app.conf
db/seeds/: i18n.toml
desktop/: package-lock.json  package.json
desktop/src/: constants.js  index.js  intl.js  main.jsx  menus.js
lib/app/: config.go  config_test.go  main.go  open.go  plugin.go  postgresql.go  rabbitmq.go  random.go  redis.go  smtp.go
lib/cache/: cache.go  redis.go
lib/i18n/: detect.go  open.go  translate.go
lib/job/: handler.go  push.go  rabbitmq.go  start.go  status.go
lib/mux/: context.go  route.go  router.go
lib/orm/: constants.go  db.go  mapper.go  migration.go  orm_test.go  postgresql.go  seed.go
locales/: buttons.zh-Hans.toml  zh-Hans.ini  zh-Hans.yml  zh-Hant.ini  zh-Hant.yml
plugins/auth/: action.go  c-attachments.go  c-must-sign-in.go  c-non-sign-in.go  c-users.go  controller.go  dao.go  jwt.go  models.go  mount.go  plugin.go  render.go  send-email.go  shell.go  worker.go
plugins/base/: constants.go  database.go  migrate.go  tasks.go
plugins/erp/: c-countries.go  c-payment-methods.go  c-shipment-methods.go  c-states.go  c-zones.go  dao.go  engine.go  mount.go  plugin.go
plugins/forum/: c-articles.go  c-comments.go  c-tags.go  engine.go  (+3 more)
routers/: router.go
src/: lib.rs  main.rs
templates/: nginx.conf
web/: actions.go  cache.go  config.go  i18n.go  layout.go  main.go  open.go  plugin.go  render.go  security.go  setting.go  uploader.go  utils.go  v8_to_v9.go  worker.go
(+325 files in other folders)
