[package]
name = "h2o"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A complete open source e-commerce solution by rust language."
homepage = "https://github.com/kapmahc/h2o"
readme = "README.md"
license = "MIT"

[dependencies]
log = "0.3.8"
env_logger = "0.4.3"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
redis = "0.8.0"
postgres = "0.14.2"
docopt = "0.8.1"
docopt_macros = "0.8.0"
mustache = "*"
rustc-serialize = "0.3.24"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_bytes = "0.10.1"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
